--- a/public/main.css
+++ b/public/main.css
@@ -70,6 +70,11 @@ form input[type="image"] {
     transform: scale(1.1);
 }
 
+.loading-status {
+    display: block;
+    text-align: center;
+}
+
 .repo-list {
     list-style: none;
     margin: 0 1em;
